gcc/testsuite/gcc.target/mips/abi-n32-long64.c
/* { dg-options "-mabi=n32 -mlong64 addressing=absolute -O2" } */
/* { dg-error "is incompatible with" "" { target *-*-* } 0 } */
#include "abi-main.h"
